# DeepDeg

./: README.md  config.yaml  environment.yml  pyproject.toml
config/: base_config.py  config.py
data_handling/: dataset.py  feature_processor.py
models/: cnn.py  deepdeg.py  feature_branch.py  modules.py  vit.py
notebooks/: merge_batches.py  mrnalm_embedding_generation.ipynb  protbert_embedding_generation.ipynb  rnabert_embedding_generation.ipynb
scripts/: data_augmenter.py  evaluate.py  feature_generator.py  train.py  train_fold.py
training/: evaluator.py  shap_analyzer.py  trainer.py
utils/: helpers.py
